# geonode-mapstore-client

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  Makefile  README.md  diff.txt  et --soft HEAD~1  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: 3.3.x-build.yml  3.3.x-test.yml  4.0.x-build.yml  4.1.x-build.yml  4.1.x-test.yml  4.x-build.yml  4.x-test.yml  backport.yml  build.yml  flake8.yml  publish-to-pypi.yml  publish-to-pypi4.4.3.yml  publish-to-pypi5.0.1.yml  static.yml  test.yml
docs/: client.md
geonode_mapstore_client/: admin.py  apps.py  context_processors.py  hooksets.py  models.py  package-lock.json  tests.py  utils.py  views.py
geonode_mapstore_client/client/: .env.json  .env.sample  .gitignore  README.md  devServer.js  env.json  package.json  postCompile.js  version.txt
geonode_mapstore_client/migrations/: 0002_migrate_map_blob.py  0003_searchservice.py  0004_auto_20231114_1705.py  0005_extension.py  0006_searchservice_namefield.py  0007_searchservice_sub_title_and_more.py
geonode_mapstore_client/templates/: base.html  index.html  page.html
geonode_mapstore_client/templatetags/: apikey.py  get_menu_json.py  get_search_services.py  get_tabular_data.py  idandsso.py  tabular_utils.py  translations_tags.py  zalf_social.py
geonode_stitch/: WORKLOG.md
geonode_stitch/advanced_components_dark/: code.html
geonode_stitch/advanced_components_light/: code.html
geonode_stitch/catalog_list_zalf_dark/: code.html
mapstore2_adapter/: context_processors.py
tutorials/: 02-theme-variables.md  03-override-local-config.md  04-development.md  07-custom-resources-page.md  index.json  theme.html
(+450 files in other folders)
