[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zalf-django-geonode-mapstore-client"
description = "Use GeoNode client in your django projects"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "GeoSolutions s.r.l.", email = "info@geosolutionsgroup.com" }
]
keywords = ["django", "mapstore", "mapstore2"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Programming Language :: Python :: 3.10"
]
dependencies = [
  "django>=4.2,<5.3",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["requests==2.32.5"]

[project.urls]
Homepage = "https://github.com/zalf-rdm/geonode-mapstore-client"
Download = "https://github.com/zalf-rdm/geonode-mapstore-client/tarball/master"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["tests*"]

# Legge la versione dal file VERSION (equivalente al tuo setup.py)
[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[tool.flake8]
max-line-length = 120
exclude = [
  "geonode_mapstore_client/*/migrations/*",
  "geonode_mapstore_client/mapstore2_adapter/*/migrations/*",
  "management",
  "scripts",
  "docs",
  "static",
  "migrations",
  "geonode_mapstore_client/mapstore2_adapter/*settings.py"
]
ignore = ["E121", "E122", "E124", "E126", "E226"]
